--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
 name: "iCMS 2017 & uRos 2017"
 output_dir: "."
 navbar:
-  title: "iCMS2017 & uRos2017-Asia Pacific "
+  title: " "
   left:
 
   right:
